# dubcar

./: .gitignore  .vimrc  README.md  ps3.sh  setup_launch.bash  setup_workspace.sh  start.sh  uninstall_ros.sh
dubcar_ws/: ps3joy_node_starter.sh
dubcar_ws/src/ackermann_to_vesc/: CMakeLists.txt  package.xml
dubcar_ws/src/ackermann_to_vesc/launch/: ackermann_to_vesc_node.launch
dubcar_ws/src/ackermann_to_vesc/src/: ackermann_to_vesc.cpp  ackermann_to_vesc_node.cpp  test.cpp
dubcar_ws/src/dubcar/: CMakeLists.txt  package.xml
dubcar_ws/src/dubcar/launch/: dubcar.launch  remote.launch  vid_teset.launch
dubcar_ws/src/joycon/: mainpage.dox  manifest.xml
dubcar_ws/src/teleop/: CMakeLists.txt  package.xml
dubcar_ws/src/teleop/launch/: teleop_node.launch
dubcar_ws/src/teleop/src/: dubcar_joy.cpp  teleop.cpp  teleop_node.cpp
dubcar_ws/src/vesc/: CMakeLists.txt  package.xml
dubcar_ws/src/vesc/src/: vesc_node.cpp
dubcar_ws/src/vesc_driver/: CMakeLists.txt  package.xml
dubcar_ws/src/vesc_driver/launch/: vesc_driver_node.launch
dubcar_ws/src/vesc_driver/src/: vesc_driver.cpp  vesc_driver_node.cpp  vesc_interface.cpp  vesc_packet.cpp
dubcar_ws/src/vesc_driver/test/: Makefile  bldc_interface.h  runTests  test_packet_gen.cpp
server/: app.py  package.json  requirements.txt
server/static/: gulpfile.js  package.json
server/static/scripts/jsx/: imu.jsx  (+2 more)
server/templates/: hello.html  index.html
vesc_packet_gen/src/: CMakeLists.txt  bldc_interface.c  test_packet_gen.cpp
vesc_packet_gen/src/unused/: Makefile  bldc_interface_uart.d  main.c  packet.d
(+8 files in other folders)
